include/libzt.h

/**
 * Start core ZeroTier service (generates identity)
 */
void zts_start(const char *path);
/**
 * Stops the core ZeroTier service
 */
void zts_stop();
/**
 * Join a network
 */
void zts_join(const char * nwid);
/**
 * Join a network - Just create the dir and conf file required, don't instruct the core to do anything
 */
void zts_join_soft(const char * filepath, const char * nwid);
/**
 * Leave a network
 */
void zts_leave(const char * nwid);
/**
 * Leave a network - Only delete the .conf file, this will prevent the service from joining upon next startup
 */
void zts_leave_soft(const char * filepath, const char * nwid);
/**
 * Return the home path for this instance of ZeroTier
 * FIXME: double check this is correct on all platforms
 */
void zts_get_homepath(char *homePath, const int len);
/**
 * Get device ID
 * 10-digit hex + NULL byte
 */
int zts_get_device_id(char *devID);
/**
 * Check whether the service is running
 */
int zts_running();
/**
 * Returns whether any IPv6 address has been assigned to the SockTap for this network
 * - This is used as an indicator of readiness for service for the ZeroTier core and stack
 */
int zts_has_ipv4_address(const char *nwid);
/**
 * Returns whether any IPv4 address has been assigned to the SockTap for this network
 * - This is used as an indicator of readiness for service for the ZeroTier core and stack
 */
int zts_has_ipv6_address(const char *nwid);
/**
 * Returns whether any address has been assigned to the SockTap for this network
 * - This is used as an indicator of readiness for service for the ZeroTier core and stack
 */
int zts_has_address(const char *nwid);
/**
 * Get IPV4 Address for this device on a given network
 * FIXME: Only returns first address found for given protocol and network (should be enough for now)
 */
void zts_get_ipv4_address(const char *nwid, char *addrstr, const int addrlen);
/**
 * Get IPV6 Address for this device on a given network
 * FIXME: Only returns first address found for given protocol and network (should be enough for now)
 */
void zts_get_ipv6_address(const char *nwid, char *addrstr, const int addrlen);
/**
 * Returns a 6PLANE IPv6 address given a network ID and zerotier ID
 */
void zts_get_6plane_addr(char *addr, const char *nwid, const char *devID);
/**
 * Returns an RFC 4193 IPv6 address given a network ID and zerotier ID
 */
void zts_get_rfc4193_addr(char *addr, const char *nwid, const char *devID);
/**
 * Return the number of peers on this network
 */
unsigned long zts_get_peer_count();
/**
 * Get the IP address of a peer if a direct path is available
 */
int zts_get_peer_address(char *peer, const char *devID);
/**
 * Enable HTTP control plane (traditionally used by zerotier-cli)
 * - Allows one to control the ZeroTier core via HTTP requests
 * FIXME: Implement
 */
void zts_enable_http_control_plane();
/**
 * Disable HTTP control plane (traditionally used by zerotier-cli)
 * - Allows one to control the ZeroTier core via HTTP requests
 * FIXME: Implement
 */
void zts_disable_http_control_plane();
/****************************************************************************/
/* SDK Socket API (Socket User Controls)                                    */
/* - These functions are designed to work just like ordinary socket calls   */
/*   but are provisioned and handled by ZeroTier                            */
/****************************************************************************/

/**
 * Creates a socket
 */
int zts_socket(ZT_SOCKET_SIG);
 /**
 * Connect a socket to a remote host
 */
int zts_connect(ZT_CONNECT_SIG);
/**
 * Binds a socket to a specific address
 *  - To accept VirtualSockets on a specific ZeroTier network you must
 *    use this bind call with an address which is associated with that network
 *
 *  For instance, given the following networks:
 *     - nwid = 97afaf1963cc6a90 (10.9.0.0/24)
 *     - nwid = 23bfae5663c8b188 (192.168.0.0/24)
 *
 *  In order to accept a VirtualSocket on 97afaf1963cc6a90, you 
 *  should bind to 10.9.0.0
 */
int zts_bind(ZT_BIND_SIG);
/**
 * Listen for incoming VirtualSockets
 */
int zts_listen(ZT_LISTEN_SIG);
/**
 * Accept a VirtualSocket
 */
int zts_accept(ZT_ACCEPT_SIG);
/**
 * Set socket options
 */
int zts_setsockopt(ZT_SETSOCKOPT_SIG);
/**
 * Get socket options
 */
int zts_getsockopt(ZT_GETSOCKOPT_SIG);
/**
 * Get socket name
 */
int zts_getsockname(ZT_GETSOCKNAME_SIG);
/**
 * Get a peer name
 */
int zts_getpeername(ZT_GETPEERNAME_SIG);
/**
 * Gets current hostname
 */
int zts_gethostname(ZT_GETHOSTNAME_SIG);
/**
 * Sets current hostname
 */
int zts_sethostname(ZT_SETHOSTNAME_SIG);
/**
 * Close a socket
 * TODO: Check that closing a socket immediately after writing doesn't behave in 
 * an undefined manner
 */
int zts_close(ZT_CLOSE_SIG);
/**
 * monitor multiple file descriptors, waiting until one or more of the file descriptors become "ready"
 */
int zts_select(ZT_SELECT_SIG);
/**
 * Issue file control commands on a socket
 */
int zts_fcntl(ZT_FCNTL_SIG);
/**
 * Control a device
 */
int zts_ioctl(ZT_IOCTL_SIG);
/**
 * Send data to a remote host
 */
ssize_t zts_send(ZT_SEND_SIG);
/**
 * Send data to a remote host
 */
ssize_t zts_sendto(ZT_SENDTO_SIG);
/**
 * Send a message to a remote host
 */
ssize_t zts_sendmsg(ZT_SENDMSG_SIG);
/**
 * Receive data from a remote host
 */
ssize_t zts_recv(ZT_RECV_SIG);
/**
 * Receive data from a remote host
 */
ssize_t zts_recvfrom(ZT_RECVFROM_SIG);
/**
 * Receive a message from a remote host
 */
ssize_t zts_recvmsg(ZT_RECVMSG_SIG);
/**
 * Read bytes from socket onto buffer
 *  - Note, this function isn't strictly necessary, you can
 *    use a regular read() call as long as the socket fd was
 *    created via a zts_socket() call. 
 */
int zts_read(ZT_READ_SIG);
/**
 * Write bytes from buffer to socket
 *  - Note, this function isn't strictly necessary, you can
 *    use a regular write() call as long as the socket fd was
 *    created via a zts_socket() call. 
 */
int zts_write(ZT_WRITE_SIG);
/*
 * Sends a FIN segment
 */
int zts_shutdown(ZT_SHUTDOWN_SIG);
/*
 * Adds a DNS nameserver for the network stack to use
 */
int zts_add_dns_nameserver(struct sockaddr *addr);
/*
 * Removes a DNS nameserver
 */
int zts_del_dns_nameserver(struct sockaddr *addr);